# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
gendiff/: __init__.py  diff_logic.py
gendiff/scripts/: gendiff.py
tests/: test_diff_logic.py
