[project]
name = "hexlet-code"
version = "0.1.0"
description = "Module 2 project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
diff-generator = "diff_generator.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
       
[tool.hatch.build.targets.wheel]
packages = ["diff_generator"]
